# fastapi-postgres-boilerplate

./: .env.example  .pre-commit-config.yaml  .pylintrc  Makefile  Pipfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg  traefik.dev.toml  traefik.prod.toml
.github/workflows/: format-and-lint.yml
alembic/: env.py
docker/: Dockerfile  Dockerfile.prod  entrypoint.sh
docker/server/: Dockerfile  Dockerfile.prod
scripts/: format.sh  lint.sh  test.sh
server/: cache.py  config.py  database.py  main.py  models.py  schemas.py
server/api/: __init__.py  create_mock_data.py
